# myCmake

./: README.md
1cmake_file/: CMakeLists.txt  README.md
2cmake_lib/: CMakeLists.txt  README.md
2cmake_lib/src/: minus.cpp
3link_lib/: CMakeLists.txt  README.md  main.cpp
3link_lib/include/: mymath.hpp
4nested_cmake/: CMakeLists.txt  README.md
4nested_cmake/calc/: CMakeLists.txt  add.cpp  minus.cpp
4nested_cmake/sort/: CMakeLists.txt  insert_sort.cpp
4nested_cmake/test1/: CMakeLists.txt  calc.cpp
4nested_cmake/test2/: CMakeLists.txt
5st_link_st/: CMakeLists.txt  README.md
5st_link_st/include/: calc.hpp  sort.hpp
5st_link_st/sort/: CMakeLists.txt  insert_sort.cpp
6st_link_sh/calc/: CMakeLists.txt
6st_link_sh/sort/: CMakeLists.txt
6st_link_sh/test/: CMakeLists.txt  sort.cpp
