cmake_minimum_required(VERSION 3.15)
project(mycmake)
# set(SRC main.cpp add.cpp minus.cpp)
set(CMAKE_CXX_STANDARD 11)
# aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
include_directories(${PROJECT_SOURCE_DIR}/include)
# add_executable(exec ${SRC})
# set(EXECUTABLE_OUTPUT_PATH ./bin)
add_library(stcalc STATIC ${SRC})
add_library(shcalc SHARED ${SRC})
set(LIBRARY_OUTPUT_PATH ./lib)